2008-08-29  Pedro Gracia  <pedro@flumotion.com>

	reviewed by: Arek Korbik  <arkadini@gmail.com> 

	* flumotion/component/consumers/httpstreamer/httpstreamer.xml:
	* flumotion/component/misc/httpserver/httpserver.py:
	* flumotion/component/misc/httpserver/httpserver.xml:
	* flumotion/component/plugs/Makefile.am:
	* flumotion/component/plugs/plugs.xml:
	* flumotion/component/plugs/rrd.py:
          Streamers can write RRD files directly with this plug.
          Fixes #1111.

2008-08-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/eventcalendar.py:
	  Fix repr interpolation.
	  Makes FLU_DEBUG=4 trial
	  flumotion.test.test_component_base_scheduler.SchedulerTest
	  not fail.

2008-08-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/monitor/nagios/main.py:
	  Fix comment.

2008-08-28  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/bouncers/Makefile.am (component_DATA): Remove
	ipbouncer.py which is already in component_PYTHON.

2008-08-28  Johan Dahlin  <johan@flumotion.com>

	* flumotion/manager/config.py:
	* flumotion/test/test_manager_config.py:
	Make sure multiple config properties are serialized property.
	Add a test.

2008-08-28  Murray Cumming  <murrayc@murrayc.com>

	* flumotion/component/consumers/disker/disker.glade: Start New File 
	button: Use header capitalization as per the HIG.

2008-08-28  Johan Dahlin  <johan@flumotion.com>

	* data/glade/sectionwizard.glade:
	* flumotion/ui/wizard.py:
	Revert wizard forward/finish change.
	Fixes #996

2008-08-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/common.mk:
	  Make sure we execute trial for coverage in the built environment.

2008-08-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	  Make sure we validate the registry.
	* flumotion/component/consumers/httpstreamer/resources.py:
	* flumotion/component/misc/httpserver/httpserver.py:
	* flumotion/test/test_http.py: