@@ -35,7 +35,7 @@
         <socket type="flumotion.component.plugs.loggers.Logger"/>
         <socket type="flumotion.component.plugs.lifecycle.ComponentLifecycle" />
         <socket type="flumotion.component.plugs.streamdata.StreamDataProvider"/>
-        <socket type="flumotion.component.plugs.rrd.RRD" />
+        <socket type="flumotion.component.plugs.rrd.RRDPlug" />
         <socket type="flumotion.component.misc.httpserver.ratecontroller.RateController"/>
       </sockets>
 
